# libcontext

./: .gitignore  .travis.yml  CONTRIBUTING.md  CPPLINT.cfg  Makefile.am  README.md  autogen.sh  configure.ac  libcontext.pc.in
m4/: ax_check_cflag_append.m4  ax_clang_format.m4  ax_compiler_checks.m4  ax_coverage.m4  ax_cpplint.m4  ax_dpkg.m4  ax_sanitizer.m4  ax_unittest.m4
make/: check.am  coverage.am  cpplint.am  format.am  lint.am  phony.am  sanity.am
src/context/: context.c  context.h  context_root.c  context_root.h  error.h  map.c  valuemap.c  valuemap.h
test/context/: background_test.c  valuemap_test  valuemap_test.c
